macros/tests/ui/fn_arguments.rs
#[macros::main]
pub fn kernel_main(a: u32) {}

pub fn main() {}
